# UNIX-Linda

./: .gitignore  CMakeLists.txt  UNIX-Linda.pro
src/bash_tests/: test.sh  test.sh~
src/bash_tests/logs/: log_client.txt  log_server.txt
src/bash_tests/scripts/: test_timeout.sh  test_timeout.sh~
src/client/: 5  Client.cpp  Client.h  client  client_out  main.cpp  main.cpp.autosave  main.cpp.cpp  makefile
src/client/bash_tests/: add_every _5_sec.sh  add_every _5_sec.sh~  every_5_sec.sh~  every_5_sec_inp.sh  every_5_sec_inp.sh~
src/server/: init_server.sh  init_server.sh~  log.txt  main.cpp  makefile  server
src/server/controller/: Server.cpp  Server.h
src/server/model/: ITupleManager.cpp  ITupleManager.h  Server.h  TupleManager.cpp  TupleManager.h
src/server/model/implementation/: CommunicationManagerFIFO.cpp  CommunicationManagerFIFO.h  TupleManager.cpp  TupleManager.h
src/server/model/interfaces/: ICommunicationManager.cpp  ICommunicationManager.h  ITupleManager.h
src/shared/: FifoManager.cpp  FifoManager.h  Tuple.cpp  Tuple.h  TupleMessage.cpp  TupleMessage.h  TupleSet.cpp  TupleSet.h  TupleValue.cpp  TupleValue.h  TupleValue.tpp
